--- a/jt-manage/src/main/resources/application.yml
+++ b/jt-manage/src/main/resources/application.yml
@@ -4,9 +4,9 @@ server:
     context-path: /
 spring:
   datasource:
-    #引入druid数据源
-    #type: com.alibaba.druid.pool.DruidDataSource
-    #driver-class-name: com.mysql.cj.jdbc.Driver
+    # 引入druid数据源
+    # type: com.alibaba.druid.pool.DruidDataSource
+    # driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/jtdb?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
     username: root
     password: root
@@ -15,7 +15,7 @@ spring:
     view:
       prefix: /WEB-INF/views/
       suffix: .jsp
-#mybatis-plush配置
+# mybatis-plus 配置
 mybatis-plus:
   type-aliases-package: com.jt.pojo
   mapper-locations: classpath:/mybatis/mappers/*.xml
