--- a/jt-manage/src/main/resources/properties/image.properties
+++ b/jt-manage/src/main/resources/properties/image.properties
@@ -1,3 +1,3 @@
-image.localDir=/Users/yanbingxu/Desktop/images/
+image.localDir=/Users/yanbingxu/Desktop/images
+image.imageUrl=http://image.jt.com
 image.imageTypes=.jpg,.png,.gif,.jpeg
-image.imageUrl=https://yuanzhibx.github.io/
