yuanzhibx update redis分片部署

--- a/jt-common/src/main/resources/properties/redis.properties
+++ b/jt-common/src/main/resources/properties/redis.properties
@@ -1,2 +1,3 @@
-redis.host=172.18.55.141
-redis.port=6379
+# redis.host=172.18.55.141
+# redis.port=6379
+redis.nodes=172.18.55.141:6379,172.18.55.141:6380,172.18.55.141:6381
