yuanzhibx add jt-sso Module

--- a/pom.xml
+++ b/pom.xml
@@ -144,5 +144,6 @@
         <module>jt-common</module>
         <module>jt-manage</module>
         <module>jt-web</module>
+        <module>jt-sso</module>
     </modules>
 </project>
