yuanzhibx  add jt-cart Module

--- a/pom.xml
+++ b/pom.xml
@@ -146,5 +146,6 @@
         <module>jt-manage</module>
         <module>jt-web</module>
         <module>jt-sso</module>
+        <module>jt-cart</module>
     </modules>
 </project>
