yuanzhibx  add jt-order Module

--- a/pom.xml
+++ b/pom.xml
@@ -147,5 +147,6 @@
         <module>jt-web</module>
         <module>jt-sso</module>
         <module>jt-cart</module>
+        <module>jt-order</module>
     </modules>
 </project>
