yuanzhibx  Quartz 订单超时任务

--- a/pom.xml
+++ b/pom.xml
@@ -133,10 +133,10 @@
         </dependency>
 
         <!-- 添加Quartz的支持 -->
-        <!-- <dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-quartz</artifactId>
-        </dependency>	 -->
+        </dependency>
 
     </dependencies>
 
